--- a/app/views/spree/admin/slides/_form.html.erb
+++ b/app/views/spree/admin/slides/_form.html.erb
@@ -25,14 +25,14 @@
   <div class="col-md-6">
     <%= f.field_container :name do %>
       <%= f.label :name, t(:name) %><br>
-      <%= f.text_field :name, :class => 'fullwidth form-control', :placeholder => t('spree_slider.placeholder_name') %>
+      <%= f.text_field :name, :class => 'fullwidth form-control', :placeholder => t('solidus_slider.placeholder_name') %>
     <% end %>
   </div>
 
   <div class="col-md-6">
     <%= f.field_container :link_url do %>
       <%= f.label :link_url, t(:link_url) %><br>
-      <%= f.text_field :link_url, :class => 'fullwidth form-control', :placeholder => t('spree_slider.placeholder_link_url') %>
+      <%= f.text_field :link_url, :class => 'fullwidth form-control', :placeholder => t('solidus_slider.placeholder_link_url') %>
     <% end %>
   </div>
 
@@ -49,7 +49,7 @@
 
   <div class="col-md-6">
     <%= f.field_container :image do %>
-      <%= f.label :image, t(:image) %> <i>(<%= t('spree_slider.image_tip') %>)</i><br>
+      <%= f.label :image, t(:image) %> <i>(<%= t('solidus_slider.image_tip') %>)</i><br>
       <%= f.file_field :image %>
     <% end %>
   </div>
