--- a/app/views/spree/admin/slides/edit.html.erb
+++ b/app/views/spree/admin/slides/edit.html.erb
@@ -1,9 +1,9 @@
 <% content_for :page_title do %>
-  <%= t('spree_slider.editing_slide') %>
+  <%= t('solidus_slider.editing_slide') %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to t('spree_slider.back_to_slides'), spree.admin_slides_path, :icon => 'arrow-left' %>
+  <%= button_link_to t('solidus_slider.back_to_slides'), spree.admin_slides_path, :icon => 'arrow-left' %>
 <% end %>
 
 <%= render 'spree/shared/error_messages', :target => @slide %>
