--- a/app/views/spree/admin/slide_locations/index.html.erb
+++ b/app/views/spree/admin/slide_locations/index.html.erb
@@ -1,9 +1,9 @@
 <% content_for :page_actions do %>
-  <%= button_link_to t('spree_slider_locations.new_location'), new_object_url, { :class => 'btn-success', :icon => 'add', :id => 'admin_new_slide_link' } %>
+  <%= button_link_to t('solidus_slider_locations.new_location'), new_object_url, { :class => 'btn-success', :icon => 'add', :id => 'admin_new_slide_link' } %>
 <% end %>
 
 <% content_for :page_title do %>
-  <%= t('spree_slider_locations.title') %>
+  <%= t('solidus_slider_locations.title') %>
 <% end %>
 
 <table class="table" id="listing_slide_locations" data-hook >
