--- a/app/views/spree/admin/slides/_edit_slider_locations.html.erb
+++ b/app/views/spree/admin/slides/_edit_slider_locations.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <thead>
     <tr data-hook="slider_locations_header">
-      <th><%= t('spree_slider_locations.title') %></th>
+      <th><%= t('solidus_slider_locations.title') %></th>
     </tr>
   </thead>
   <tbody id='slider_locations'>
@@ -17,8 +17,8 @@
   </tbody>
 </table>
 
-<%#= link_to_add_fields t('spree_slider_locations.new_location'), "tbody#slider_locations" %>
-<%= button_link_to t('spree_slider_locations.new_location'), 'javascript:;', {
+<%#= link_to_add_fields t('solidus_slider_locations.new_location'), "tbody#slider_locations" %>
+<%= button_link_to t('solidus_slider_locations.new_location'), 'javascript:;', {
       icon: 'add', 
       :'data-target' => 'tbody#slider_locations', 
       class: 'btn-success spree_add_fields' 
