--- a/app/views/spree/admin/slides/_form.html.erb
+++ b/app/views/spree/admin/slides/_form.html.erb
@@ -15,6 +15,15 @@
     </div>
   </div>
 
+  <div class="col-md-10">
+    <div class="field checkbox">
+      <label>
+        <%= f.check_box :show_caption, class: "form-control" %>
+        <%= t(:show_caption) %>
+      </label>
+    </div>
+  </div>
+
   <div class="col-md-12">
     <%= f.field_container :product_id do %>
       <%= label_tag :product_id, t(:product) %><br>
