--- a/app/views/spree/shared/_slider.html.erb
+++ b/app/views/spree/shared/_slider.html.erb
@@ -27,7 +27,9 @@
           slideSpeed : 800,
           singleItem: true,
           autoPlay: 5000,
-          stopOnHover: true
+          stopOnHover: true,
+          dots:false,
+          navigation:false
           // navigationText: ['<span class="slideshow-arrow slideshow-arrow-left"></span>', '<span class="slideshow-arrow slideshow-arrow-right"></span>'],
 //          transitionStyle: "goDown"
         });
