--- a/app/views/spree/shared/_slider.html.erb
+++ b/app/views/spree/shared/_slider.html.erb
@@ -29,7 +29,8 @@
           autoPlay: 5000,
           stopOnHover: true,
           dots:false,
-          navigation:false
+          navigation:false,
+          pagination:false
           // navigationText: ['<span class="slideshow-arrow slideshow-arrow-left"></span>', '<span class="slideshow-arrow slideshow-arrow-right"></span>'],
 //          transitionStyle: "goDown"
         });
