--- a/app/views/spree/shared/_slider.html.erb
+++ b/app/views/spree/shared/_slider.html.erb
@@ -1,5 +1,5 @@
 <% if slider.size > 0 %>
-    <slick slides-to-show="1" ng-if="true" settings="{arrows:false,centerMode:false,centerPadding:'0'}">
+    <slick slides-to-show="1" ng-if="true" settings="{arrows:false,centerMode:false,centerPadding:'0',autoplay: true,autoplaySpeed: 5000,fade:true}">
       <% slider.each_with_index do |slide, index| %>
           <div class="item">
             <%= link_to image_tag(slide.slide_image.url, alt: slide.slide_caption,class:'img-responsive'), url_for(slide.slide_link) %>
