--- a/app/views/spree/admin/slide_locations/edit.html.erb
+++ b/app/views/spree/admin/slide_locations/edit.html.erb
@@ -1,19 +1,18 @@
+<%= render partial: 'spree/admin/shared/configuration_menu' %>
+
 <% content_for :page_title do %>
-  <%= t('solidus_slider_locations.editing_location') %>
+  <%= Spree.t('slider_locations.editing_location') %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to t('solidus_slider_locations.back_to_locations'), spree.admin_slide_locations_path, :icon => 'arrow-left' %>
+  <%= button_link_to Spree.t('slider_locations.back_to_locations'), spree.admin_slide_locations_path %>
 <% end %>
 
-<%= render 'spree/shared/error_messages', :target => @slide_location %>
+<%= render 'spree/shared/error_messages', target: @slide_location %>
 
 <%= form_for [:admin, @slide_location] do |f| %>
-  <fieldset class="no-border-top">
-    <%= render :partial => 'form', :locals => { :f => f } %>
-
-    <div data-hook="admin_slider_locations_method_edit_form_buttons">
-      <%= render :partial => 'spree/admin/shared/edit_resource_links' %>
-    </div>
-  </fieldset>
+  <%= render partial: 'form', locals: { f: f } %>
+  <div class="form-actions" data-hook="buttons">
+    <%= render partial: 'spree/admin/shared/edit_resource_links' %>
+  </div>
 <% end %>
