--- a/app/views/spree/admin/slide_locations/index.html.erb
+++ b/app/views/spree/admin/slide_locations/index.html.erb
@@ -1,29 +1,40 @@
+<%= render partial: 'spree/admin/shared/configuration_menu' %>
+
 <% content_for :page_actions do %>
-  <%= button_link_to t('solidus_slider_locations.new_location'), new_object_url, { :class => 'btn-success', :icon => 'add', :id => 'admin_new_slide_link' } %>
+  <%= button_link_to Spree.t('slider_locations.new_location'), new_object_url, { id: 'admin_new_slide_link' } %>
 <% end %>
 
 <% content_for :page_title do %>
-  <%= t('solidus_slider_locations.title') %>
+  <%= Spree.t('slider_locations.title') %>
 <% end %>
 
-<table class="table" id="listing_slide_locations" data-hook >
-  <thead>
-    <tr data-hook="admin_slides_index_headers">
-      <th><%= Spree.t(:name) %></th>
-      <th data-hook="admin_slides_index_header_actions" class="actions"></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @slide_locations.each do |location|%>
-    <tr>
-      <td class="align-center"><%= location.name %></td>
-      <td data-hook="admin_slide_locations_index_row_actions" class="actions">
-        <%= link_to_edit location, :no_text => true, :class => 'edit' %>
-        &nbsp;
-        <%= link_to_delete location, :no_text => true %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<% if @slide_locations %>
+  <table class='table' id='listing_slide_locations' data-hook>
+    <thead>
+      <tr data-hook='admin_slides_index_headers'>
+        <th><%= Spree.t(:name) %></th>
+        <th data-hook='admin_slides_index_header_actions' class='actions'></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @slide_locations.each do |location|%>
+        <tr>
+          <td class='align-left'><%= location.name %></td>
+          <td data-hook='admin_slide_locations_index_row_actions' class='actions'>
+            <%= link_to_edit location, no_text: true, class: 'edit' if can?(:edit, location)  %>
+            <%= link_to_delete location, no_text: true if can?(:delete, location) %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <div class='no-objects-found'>
+    <%= render 'spree/admin/shared/no_objects_found',
+                 resource: Spree::SlideLocation,
+                 new_resource_url: new_object_url %>
+  </div>
+<% end %>
+
 
