--- a/app/views/spree/admin/slides/_form.html.erb
+++ b/app/views/spree/admin/slides/_form.html.erb
@@ -1,78 +1,70 @@
-<div class="row">
-  <div class="col-md-2">
-    <%= f.field_container :position do %>
-      <%= f.label :position, t(:position) %>
-      <%= f.number_field :position, :class => 'fullwidth form-control' %>
-    <% end %>
-  </div>
-
-  <div class="col-md-10">
-    <div class="field checkbox">
-      <label>
-        <%= f.check_box :published, class: "form-control" %>
-        <%= t(:published) %>
-      </label>
-    </div>
-  </div>
-
-  <div class="col-md-10">
-    <div class="field checkbox">
-      <label>
-        <%= f.check_box :show_caption, class: "form-control" %>
-        <%= t(:show_caption) %>
-      </label>
-    </div>
-  </div>
-
-  <div class="col-md-12">
-    <%= f.field_container :product_id do %>
-      <%= label_tag :product_id, t(:product) %><br>
-      <%= hidden_field_tag 'slide[product_id]', f.object.product_id.to_s, :class => "product_picker fullwidth" %>
-    <% end %>
-  </div>
-
-  <div class="col-md-6">
-    <%= f.field_container :name do %>
-      <%= f.label :name, t(:name) %><br>
-      <%= f.text_field :name, :class => 'fullwidth form-control', :placeholder => t('solidus_slider.placeholder_name') %>
-    <% end %>
-  </div>
-
-  <div class="col-md-6">
-    <%= f.field_container :link_url do %>
-      <%= f.label :link_url, t(:link_url) %><br>
-      <%= f.text_field :link_url, :class => 'fullwidth form-control', :placeholder => t('solidus_slider.placeholder_link_url') %>
-    <% end %>
-  </div>
-
-  <div class="col-md-6">
-    <%= render 'spree/admin/slides/edit_slider_locations', f: f %>
-  </div>
-
-  <div class="col-md-12">
-    <%= f.field_container :body do %>
-      <%= f.label :body, t(:body) %><br>
-      <%= f.text_area :body, {:cols => 60, :rows => 4, :class => 'fullwidth form-control'} %>
-    <% end %>
-  </div>
-
-  <div class="col-md-6">
-    <%= f.field_container :image do %>
-      <%= f.label :image, t(:image) %> <i>(<%= t('solidus_slider.image_tip') %>)</i><br>
-      <%= f.file_field :image %>
-    <% end %>
-  </div>
-
-  <div class="col-md-6">
-    <%= f.field_container :image do %>
-      <% if f.object.image? %>
-        <p>
-          <%= label_tag t(:preview) %>
-          <br>
-          <%= image_tag f.object.image, class: 'img-responsive' %>
-        </p>
+<div data-hook='admin_slide_form_fields'>
+  <div class='row'>
+    <div class='left col-2'>
+      <%= f.field_container :position do %>
+        <%= f.label :position, Spree.t(:position) %>
+        <%= f.number_field :position, class: 'fullwidth' %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
 
+    <div class='col-5'>
+      <%= f.field_container :product_id do %>
+        <%= label_tag :product_id, Spree.t(:product) %><br />
+        <%= hidden_field_tag 'slide[product_id]', f.object.product_id.to_s, class: 'product_picker fullwidth' %>
+      <% end %>
+    </div>
+
+    <div class='col-5'>
+      <%= f.field_container :name do %>
+        <%= f.label :name, Spree.t(:name) %><br />
+        <%= f.text_field :name, class: 'fullwidth', placeholder: Spree.t('slider.placeholder_name') %>
+      <% end %>
+    </div>
+
+    <div class='col-2'>
+      <div class='field checkbox'>
+        <label>
+          <%= f.check_box :published %>
+          <%= Spree.t(:published) %>
+        </label>
+      </div>
+    </div>
+
+    <div class='col-5'>
+      <%= f.field_container :link_url do %>
+        <%= f.label :link_url, Spree.t(:link_url) %><br />
+        <%= f.text_field :link_url, class: 'fullwidth', placeholder: Spree.t('slider.placeholder_link_url') %>
+      <% end %>
+    </div>
+
+    <div class='col-5'>
+      <%= f.field_container :body do %>
+        <%= f.label :body, Spree.t(:body) %><br />
+        <%= f.text_area :body, { cols: 60, rows: 4, class: 'fullwidth'} %>
+      <% end %>
+    </div>
+
+    <div class='col-5'>
+      <%= f.field_container :slide_locations do %>
+        <%= label_tag :slide_location_ids, Spree.t(:location) %><br />
+        <%= hidden_field_tag 'slide[slide_location_ids]', f.object.slide_location_ids.join(','), class: 'slide_location_picker fullwidth' %>
+      <% end %>
+    </div>
+
+    <div class='col-4'>
+      <%= f.field_container :image do %>
+        <%= f.label :image, Spree.t(:image) %> <i>(<%= Spree.t('slider.image_tip') %>)</i><br />
+        <%= f.file_field :image %>
+      <% end %>
+    </div>
+
+    <div class='col-2'>
+      <%= f.field_container :image do %>
+        <% if f.object.image? %>
+          <p><%= image_tag f.object.image, style: 'max-width: 100%; height: auto;' %></p>
+        <% end %>
+      <% end %>
+    </div>
+
+  </div>
 </div>
