--- a/app/views/spree/admin/slides/edit.html.erb
+++ b/app/views/spree/admin/slides/edit.html.erb
@@ -1,19 +1,23 @@
+<%= render partial: 'spree/admin/shared/configuration_menu' %>
+
 <% content_for :page_title do %>
-  <%= t('solidus_slider.editing_slide') %>
+  <%= Spree.t('slider.editing_slide') %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to t('solidus_slider.back_to_slides'), spree.admin_slides_path, :icon => 'arrow-left' %>
+  <li>
+    <%= button_link_to Spree.t('slider.back_to_slides'), new_object_url, { id: 'admin_new_slide' } %>
+  </li>
+  <li>
+    <%= button_link_to Spree.t('slider_locations.new_location'), admin_slide_locations_path, { id: 'admin_new_slide_location' } %>
+  </li>
 <% end %>
 
-<%= render 'spree/shared/error_messages', :target => @slide %>
+<%= render 'spree/shared/error_messages', target: @slide %>
 
-<%= form_for [:admin, @slide], :html => { :multipart => true } do |f| %>
-  <fieldset class="no-border-top">
-    <%= render :partial => 'form', :locals => { :f => f } %>
-
-    <div data-hook="admin_slides_edit_form_buttons">
-      <%= render :partial => 'spree/admin/shared/edit_resource_links' %>
-    </div>
-  </fieldset>
+<%= form_for [:admin, @slide], html: { multipart: true } do |f| %>
+  <%= render partial: 'form', locals: { f: f } %>
+  <div class="form-actions" data-hook="buttons">
+    <%= render partial: 'spree/admin/shared/edit_resource_links' %>
+  </div>
 <% end %>
