--- a/app/views/spree/admin/slides/index.html.erb
+++ b/app/views/spree/admin/slides/index.html.erb
@@ -1,38 +1,50 @@
+<%= render partial: 'spree/admin/shared/configuration_menu' %>
+
 <% content_for :page_actions do %>
-  <%= button_link_to t('solidus_slider.new_slide'), new_object_url, { :class => 'btn-success', :icon => 'add', :id => 'admin_new_slide_link' } %>
+  <li>
+    <%= button_link_to Spree.t(:'slider.new_slide'), new_object_url, id: 'admin_new_slide_link' %>
+  </li>
 <% end %>
 
 <% content_for :page_title do %>
-  <%= t('solidus_slider.title') %>
+  <%= Spree.t('slider.title') %>
 <% end %>
 
-<table class="table sortable" id="listing_slides" data-hook data-sortable-link="<%= update_positions_admin_slides_url %>" >
-  <thead>
-  <tr data-hook="admin_slides_index_headers">
-    <th colspan="2"><%= Spree.t(:image) %></th>
-    <th><%= Spree.t(:name) %></th>
-    <th><%= Spree.t(:product) %></th>
-    <th><%= Spree.t(:published) %></th>
-    <th data-hook="admin_slides_index_header_actions" class="actions"></th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @slides.each do |slide|%>
-    <tr id="<%= spree_dom_id slide %>" data-hook="admin_slides_index_rows">
-      <td class="no-border">
-        <span class="handle"></span>
-      </td>
-      <td class="align-center"><%= image_tag slide.slide_image, style: 'width: 120px; height: auto;' %></td>
-      <td class="align-center"><%= link_to slide.name, object_url(slide) %></td>
-      <td class="align-center"><%= link_to slide.product.name, object_url(slide) unless slide.product_id.blank? %></td>
-      <td class="align-center"><%= slide.published ? Spree.t(:say_yes) : Spree.t(:say_no) %></td>
-      <td data-hook="admin_slides_index_row_actions" class="actions">
-        <%= link_to_edit slide, :no_text => true, :class => 'edit' %>
-        &nbsp;
-        <%= link_to_delete slide, :no_text => true %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<% if @slides %>
+  <table class='index sortable' id='listing_slides' data-hook data-sortable-link='<%= update_positions_admin_slides_url %>' >
+    <thead>
+      <tr data-hook='admin_slides_index_headers'>
+        <th colspan='2'><%= Spree.t(:image) %></th>
+        <th><%= Spree.t(:name) %></th>
+        <th><%= Spree.t(:product) %></th>
+        <th><%= Spree.t(:published) %></th>
+        <th data-hook='admin_slides_index_header_actions' class='actions'></th>
+      </tr>
+    </thead>
 
+    <tbody>
+      <% @slides.each do |slide|%>
+        <tr id='<%= spree_dom_id slide %>' data-hook='admin_slides_index_rows'>
+          <td class='no-border'><span class='handle'></span></td>
+          <td class='align-left'><%= image_tag slide.slide_image, style: 'width: 120px; height: auto;' %></td>
+          <td class='align-left'><%= link_to slide.name, object_url(slide) %></td>
+          <td class='align-left'><%= link_to slide.product.name, object_url(slide) unless slide.product_id.blank? %></td>
+          <td class='align-center'><%= slide.published ? Spree.t(:say_yes) : Spree.t(:say_no) %></td>
+          <td data-hook='admin_slides_index_row_actions' class='actions'>
+            <%= link_to_edit slide, no_text: true, class: 'edit' if can?(:edit, slide) %>
+            &nbsp;
+            <%= link_to_delete slide, no_text: true if can?(:delete, slide) %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <div class='no-objects-found'>
+    <%= render 'spree/admin/shared/no_objects_found',
+                 resource: Spree::Slide,
+                 new_resource_url: new_object_url %>
+  </div>
+<% end %>
+
+<%= paginate @slides, theme: 'solidus_admin' %>
