--- a/app/views/spree/admin/slides/new.html.erb
+++ b/app/views/spree/admin/slides/new.html.erb
@@ -1,21 +1,18 @@
+<%= render partial: 'spree/admin/shared/configuration_menu' %>
+
 <% content_for :page_title do %>
-  <%= t('solidus_slider.new_slide') %>
+  <%= Spree.t('slider.new_slide') %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to t('solidus_slider.back_to_slides'), spree.admin_slides_path, :icon => 'arrow-left' %>
+  <li>
+    <%= button_link_to Spree.t('slider.back_to_slides'), spree.admin_slides_path %>
+  </li>
 <% end %>
 
-<%= render 'spree/shared/error_messages', :target => @slide %>
+<%= render 'spree/shared/error_messages', target: @slide %>
 
-<%= form_for [:admin, @slide] , :html => { :multipart => true } do |f| %>
-  <fieldset class="no-border-top">
-    <%= render :partial => 'form', :locals => { :f => f } %>
-
-    <div class="clear"></div>
-
-    <div data-hook="admin_shipping_method_new_form_buttons">
-      <%= render :partial => 'spree/admin/shared/new_resource_links' %>
-    </div>
-  </fieldset>
+<%= form_for [:admin, @slide] , html: { multipart: true } do |f| %>
+  <%= render :partial => 'form', locals: { f: f } %>
+  <%= render partial: 'spree/admin/shared/new_resource_links' %>
 <% end %>
