--- a/app/views/spree/admin/slides/new.html.erb
+++ b/app/views/spree/admin/slides/new.html.erb
@@ -6,7 +6,7 @@
 
 <% content_for :page_actions do %>
   <li>
-    <%= link_to I18n.t('slider.back_to_slides'), spree.admin_slides_path %>
+    <%= link_to I18n.t('slider.back_to_slides'), spree.admin_slides_path, class: 'btn btn-primary' %>
   </li>
 <% end %>
 
