--- a/app/views/spree/admin/slide_locations/new.html.erb
+++ b/app/views/spree/admin/slide_locations/new.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= link_to I18n.t('slider_locations.back_to_locations'), spree.admin_slide_locations_path %>
+  <%= link_to I18n.t('slider_locations.back_to_locations'), spree.admin_slide_locations_path, class: 'btn btn-primary' %>
 <% end %>
 
 <%= render 'spree/shared/error_messages', target: @slide_location %>
