--- a/app/views/spree/admin/slides/index.html.erb
+++ b/app/views/spree/admin/slides/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :page_actions do %>
   <li>
-    <%= link_to I18n.t(:'slider.new_slide'), new_object_url, id: 'admin_new_slide_link' %>
+    <%= link_to I18n.t(:'slider.new_slide'), new_object_url, id: 'admin_new_slide_link' , class: 'btn btn-primary' %>
   </li>
 <% end %>
 
