--- a/app/views/spree/admin/slides/new.html.erb
+++ b/app/views/spree/admin/slides/new.html.erb
@@ -1,10 +1,10 @@
 <% content_for :page_title do %>
-  <%= I18n.t('slider.new_slide') %>
+  <%= I18n.t('spree.slider.new_slide') %>
 <% end %>
 
 <% content_for :page_actions do %>
   <li>
-    <%= link_to I18n.t('slider.back_to_slides'),
+    <%= link_to I18n.t('spree.slider.back_to_slides'),
                 spree.admin_slides_path,
                 class: 'btn btn-primary' %>
   </li>
