--- a/app/views/spree/admin/slide_locations/_form.html.erb
+++ b/app/views/spree/admin/slide_locations/_form.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-12'>
       <%= f.field_container :name do %>
-        <%= f.label :name, I18n.t(:name) %><br>
+        <%= f.label :name, I18n.t('spree.name') %><br>
         <%= f.text_field :name, class: 'form-control fullwidth' %>
       <% end %>
     </div>
