--- a/app/views/spree/admin/slide_locations/index.html.erb
+++ b/app/views/spree/admin/slide_locations/index.html.erb
@@ -1,16 +1,19 @@
 <% content_for :page_actions do %>
-  <%= link_to I18n.t('slider_locations.new_location'), new_object_url, id: 'admin_new_slide_link', class: 'btn btn-primary'%>
+  <%= link_to I18n.t('spree.slide_locations.new_location'),
+              new_object_url,
+              id: 'admin_new_slide_link',
+              class: 'btn btn-primary'%>
 <% end %>
 
 <% content_for :page_title do %>
-  <%= I18n.t('slider_locations.title') %>
+  <%= I18n.t('spree.admin.tab.slide_locations') %>
 <% end %>
 
 <% if @slide_locations %>
   <table class='table' id='listing_slide_locations' data-hook>
     <thead>
       <tr data-hook='admin_slides_index_headers'>
-        <th><%= I18n.t(:name) %></th>
+        <th><%= I18n.t('spree.name') %></th>
         <th data-hook='admin_slides_index_header_actions' class='actions'></th>
       </tr>
     </thead>
