--- a/app/views/spree/admin/slide_locations/new.html.erb
+++ b/app/views/spree/admin/slide_locations/new.html.erb
@@ -1,9 +1,11 @@
 <% content_for :page_title do %>
-  <%= I18n.t('slider_locations.new_location') %>
+  <%= I18n.t('spree.slide_locations.new_location') %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= link_to I18n.t('slider_locations.back_to_locations'), spree.admin_slide_locations_path, class: 'btn btn-primary' %>
+  <%= link_to I18n.t('spree.slide_locations.back_to_locations'),
+              spree.admin_slide_locations_path,
+              class: 'btn btn-primary' %>
 <% end %>
 
 <%= render 'spree/shared/error_messages', target: @slide_location %>
