--- a/app/views/spree/admin/slides/edit.html.erb
+++ b/app/views/spree/admin/slides/edit.html.erb
@@ -1,13 +1,19 @@
 <% content_for :page_title do %>
-  <%= I18n.t('slider.editing_slide') %>
+  <%= I18n.t('spree.slider.editing_slide') %>
 <% end %>
 
 <% content_for :page_actions do %>
   <li>
-    <%= link_to I18n.t('slider.back_to_slides'), new_object_url, id: 'admin_new_slide', class: 'btn btn-primary' %>
+    <%= link_to I18n.t('spree.slider.back_to_slides'),
+                new_object_url,
+                id: 'admin_new_slide',
+                class: 'btn btn-primary' %>
   </li>
   <li>
-    <%= link_to I18n.t('slider_locations.new_location'), admin_slide_locations_path, id: 'admin_new_slide_location', class: 'btn btn-primary' %>
+    <%= link_to I18n.t('spree.slide_locations.new_location'),
+                admin_slide_locations_path,
+                id: 'admin_new_slide_location',
+                class: 'btn btn-primary' %>
   </li>
 <% end %>
 
